# qhack2022-hackeinberg-project

./: .gitignore  Implementation.ipynb  README.md  developers_guide.md  environment.yml  molecule_pyscf_sto-3g.hdf5  notebook.ipynb  presentation.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tmpjnyh5mh1  tmpswd370rl
.github/workflows/: greetings.yml  tests.yml
hackeinberg_project/: __init__.py  sanity.py
hackeinberg_project/_main/: simulation.py
hackeinberg_project/main/: simulation.py
